[gd_scene load_steps=37 format=2]

[ext_resource path="res://Source/Images/paper.jpg" type="Texture" id=1]
[ext_resource path="res://Source/Images/game_hospital_logo.png" type="Texture" id=2]
[ext_resource path="res://Source/Fonts/Morgan.otf" type="DynamicFontData" id=3]
[ext_resource path="res://Source/Images/send.png" type="Texture" id=4]
[ext_resource path="res://Source/Images/clip.png" type="Texture" id=5]
[ext_resource path="res://Source/Sounds/PaperFlip1.wav" type="AudioStream" id=6]
[ext_resource path="res://Source/Scripts/Document.gd" type="Script" id=7]
[ext_resource path="res://Source/Sounds/PaperFlip2.wav" type="AudioStream" id=8]
[ext_resource path="res://Source/Sounds/Signature.wav" type="AudioStream" id=9]
[ext_resource path="res://Source/Sounds/Stamp.wav" type="AudioStream" id=10]
[ext_resource path="res://Source/Sounds/PaperSliding3.wav" type="AudioStream" id=11]
[ext_resource path="res://Source/Sounds/PaperSliding1.wav" type="AudioStream" id=12]
[ext_resource path="res://Source/Sounds/PaperSliding2.wav" type="AudioStream" id=13]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 12
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 12
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 10
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
size = 12
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=7]
size = 10
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=8]
size = 12
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=9]
size = 10
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=10]
size = 12
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=11]
size = 10
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=12]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=13]
size = 12
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=14]
size = 10
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=15]
size = 12
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=16]
size = 10
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=17]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=18]
size = 12
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=19]
size = 10
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=20]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=21]
size = 12
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=22]
size = 10
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=23]
size = 10
font_data = ExtResource( 3 )

[node name="Document" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 7 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="DocExitButton" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
flat = true
__meta__ = {
"_edit_lock_": true
}

[node name="BackgroundPaper" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0.611765 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -197.0
margin_top = -267.0
margin_right = 209.0
margin_bottom = 277.0
rect_min_size = Vector2( 400, 0 )
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[node name="UI" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -270.0
margin_right = 200.0
margin_bottom = 270.0
rect_min_size = Vector2( 400, 0 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Header" type="Control" parent="UI"]
anchor_right = 1.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true
}

[node name="LineL" type="Line2D" parent="UI/Header"]
position = Vector2( 66.2051, 29 )
points = PoolVector2Array( -58.2051, 21, 34.7949, 21 )
__meta__ = {
"_edit_lock_": true
}

[node name="HospitalLogo" type="TextureRect" parent="UI/Header"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -108.0
margin_top = 11.0
margin_right = -28.0
margin_bottom = 91.0
mouse_filter = 2
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[node name="Title" type="Label" parent="UI/Header"]
modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -30.0
margin_top = 20.0
margin_right = 100.0
margin_bottom = 79.0
custom_fonts/font = SubResource( 1 )
text = "Hospital Genérico"
autowrap = true
__meta__ = {
"_edit_lock_": true
}

[node name="LineR" type="Line2D" parent="UI/Header"]
position = Vector2( 185.205, 29 )
points = PoolVector2Array( 113.795, 21, 205.795, 21 )
__meta__ = {
"_edit_lock_": true
}

[node name="Clip" type="TextureRect" parent="UI/Header"]
margin_left = 20.0
margin_top = -12.0
margin_right = 100.0
margin_bottom = 68.0
mouse_filter = 2
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[node name="IntroductionSection" type="Control" parent="UI"]
anchor_right = 1.0
margin_left = 10.0
margin_top = 90.0
margin_right = -10.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true
}

[node name="Introduction" type="Label" parent="UI/IntroductionSection"]
modulate = Color( 0, 0, 0, 1 )
margin_right = 380.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 2 )
text = "Caro paciente, este documento contém todas as informações necessárias sobre suas condições físicas, mentais e dentre outras. Por favor, direcione o mesmo a um médico responsável."
autowrap = true
__meta__ = {
"_edit_lock_": true
}

[node name="IDSection" type="Control" parent="UI"]
anchor_right = 1.0
margin_left = 10.0
margin_top = 161.0
margin_right = -10.0
margin_bottom = 161.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true
}

[node name="Title" type="Label" parent="UI/IDSection"]
modulate = Color( 0, 0, 0, 1 )
margin_left = -1.0
margin_top = -4.0
margin_right = 54.0
margin_bottom = 5.0
custom_fonts/font = SubResource( 3 )
text = "Identificação"
__meta__ = {
"_edit_lock_": true
}

[node name="LineID" type="Line2D" parent="UI/IDSection"]
position = Vector2( 105, 8 )
points = PoolVector2Array( 278, 0, 56, 0 )
width = 6.0
__meta__ = {
"_edit_lock_": true
}

[node name="NameLabel" type="Label" parent="UI/IDSection"]
modulate = Color( 0, 0, 0, 1 )
margin_left = -1.0
margin_top = 20.0
margin_right = 126.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 4 )
text = "Nome do Paciente"
__meta__ = {
"_edit_lock_": true
}

[node name="PatientName" type="Label" parent="UI/IDSection"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 130.0
margin_top = 21.0
margin_right = 383.0
margin_bottom = 33.0
custom_fonts/font = SubResource( 5 )
clip_text = true
__meta__ = {
"_edit_lock_": true
}

[node name="AgeLabel" type="Label" parent="UI/IDSection"]
modulate = Color( 0, 0, 0, 1 )
margin_left = -1.0
margin_top = 35.0
margin_right = 127.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 6 )
text = "Idade do Paciente"
__meta__ = {
"_edit_lock_": true
}

[node name="PatientAge" type="Label" parent="UI/IDSection"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 128.0
margin_top = 37.0
margin_right = 144.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 7 )
align = 1
clip_text = true
__meta__ = {
"_edit_lock_": true
}

[node name="SexLabel" type="Label" parent="UI/IDSection"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 145.0
margin_top = 35.0
margin_right = 197.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 8 )
text = "Gênero"
__meta__ = {
"_edit_lock_": true
}

[node name="PatientSex" type="Label" parent="UI/IDSection"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 198.0
margin_top = 36.0
margin_right = 210.0
margin_bottom = 50.0
custom_fonts/font = SubResource( 9 )
align = 1
clip_text = true
__meta__ = {
"_edit_lock_": true
}

[node name="BloodLabel" type="Label" parent="UI/IDSection"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 211.0
margin_top = 35.0
margin_right = 319.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 10 )
text = "Tipo Sanguíneo"
__meta__ = {
"_edit_lock_": true
}

[node name="PatientBlood" type="OptionButton" parent="UI/IDSection"]
modulate = Color( 1, 0, 0, 1 )
margin_left = 322.0
margin_top = 33.0
margin_right = 382.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 11 )
flat = true
clip_text = true
__meta__ = {
"_edit_lock_": true
}

[node name="HeartRateSection" type="Control" parent="UI"]
visible = false
anchor_right = 1.0
margin_top = 213.0
margin_bottom = 213.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true
}

[node name="Title" type="Label" parent="UI/HeartRateSection"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 9.0
margin_top = -3.0
margin_right = 245.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 12 )
text = "Condição Cardíaca"
__meta__ = {
"_edit_lock_": true
}

[node name="LineID" type="Line2D" parent="UI/HeartRateSection"]
position = Vector2( 165, 10 )
points = PoolVector2Array( 228, 0, 81, 0 )
width = 6.0
__meta__ = {
"_edit_lock_": true
}

[node name="BPMLabel" type="Label" parent="UI/HeartRateSection"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 9.0
margin_top = 23.0
margin_right = 213.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 13 )
text = "Batimentos por minuto (BPM)"
__meta__ = {
"_edit_lock_": true
}

[node name="PatientBPM" type="Label" parent="UI/HeartRateSection"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 218.0
margin_top = 24.0
margin_right = 246.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 14 )
clip_text = true
__meta__ = {
"_edit_lock_": true
}

[node name="BPMClassLabel" type="Label" parent="UI/HeartRateSection"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 9.0
margin_top = 36.0
margin_right = 179.0
margin_bottom = 50.0
custom_fonts/font = SubResource( 15 )
text = "Classificação Cardíaca"
__meta__ = {
"_edit_lock_": true
}

[node name="PatientBPMClass" type="OptionButton" parent="UI/HeartRateSection"]
modulate = Color( 1, 0, 0, 1 )
margin_left = 180.0
margin_top = 35.0
margin_right = 298.0
margin_bottom = 53.0
custom_fonts/font = SubResource( 16 )
flat = true
clip_text = true
__meta__ = {
"_edit_lock_": true
}

[node name="TemperatureSection" type="Control" parent="UI"]
visible = false
anchor_right = 1.0
margin_left = 10.0
margin_top = 265.0
margin_right = -10.0
margin_bottom = 265.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true
}

[node name="Title" type="Label" parent="UI/TemperatureSection"]
modulate = Color( 0, 0, 0, 1 )
margin_left = -1.0
margin_top = -3.0
margin_right = 97.0
margin_bottom = 6.0
custom_fonts/font = SubResource( 17 )
text = "Temperatura Corporal"
__meta__ = {
"_edit_lock_": true
}

[node name="LineID" type="Line2D" parent="UI/TemperatureSection"]
position = Vector2( 180, 9 )
points = PoolVector2Array( 203, 0, 97, 0 )
width = 6.0
__meta__ = {
"_edit_lock_": true
}

[node name="TemperatureLabel" type="Label" parent="UI/TemperatureSection"]
modulate = Color( 0, 0, 0, 1 )
margin_left = -1.0
margin_top = 21.0
margin_right = 181.0
margin_bottom = 35.0
custom_fonts/font = SubResource( 18 )
text = "Temperatura do Paciente"
__meta__ = {
"_edit_lock_": true
}

[node name="PatientTemperature" type="Label" parent="UI/TemperatureSection"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 186.0
margin_top = 22.0
margin_right = 233.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 19 )
clip_text = true
__meta__ = {
"_edit_lock_": true
}

[node name="TemperatureClassLabel" type="Label" parent="UI/TemperatureSection"]
modulate = Color( 0, 0, 0, 1 )
margin_left = -1.0
margin_top = 35.0
margin_right = 158.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 18 )
text = "Condição do Paciente"
__meta__ = {
"_edit_lock_": true
}

[node name="PatientTemperatureClass" type="OptionButton" parent="UI/TemperatureSection"]
modulate = Color( 1, 0, 0, 1 )
margin_left = 159.0
margin_top = 34.0
margin_right = 276.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 19 )
flat = true
clip_text = true
__meta__ = {
"_edit_lock_": true
}

[node name="VirusSection" type="Control" parent="UI"]
visible = false
anchor_right = 1.0
margin_left = 10.0
margin_top = 315.0
margin_right = -10.0
margin_bottom = 146.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true
}

[node name="Title" type="Label" parent="UI/VirusSection"]
modulate = Color( 0, 0, 0, 1 )
margin_left = -1.0
margin_top = -3.0
margin_right = 216.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 20 )
text = "Doenças Presentes"
__meta__ = {
"_edit_lock_": true
}

[node name="LineID" type="Line2D" parent="UI/VirusSection"]
position = Vector2( 142, 10 )
points = PoolVector2Array( 241, 0, 77, 0 )
width = 6.0
__meta__ = {
"_edit_lock_": true
}

[node name="VirusLabel" type="Label" parent="UI/VirusSection"]
modulate = Color( 0, 0, 0, 1 )
margin_left = -1.0
margin_top = 21.0
margin_right = 134.0
margin_bottom = 35.0
custom_fonts/font = SubResource( 21 )
text = "Doença Contraída"
__meta__ = {
"_edit_lock_": true
}

[node name="PatientVirus" type="OptionButton" parent="UI/VirusSection"]
modulate = Color( 1, 0, 0, 1 )
margin_left = 135.0
margin_top = 20.0
margin_right = 230.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 22 )
flat = true
clip_text = true
__meta__ = {
"_edit_lock_": true
}

[node name="HasVirusLabel" type="Label" parent="UI/VirusSection"]
modulate = Color( 0, 0, 0, 1 )
margin_left = -1.0
margin_top = 36.0
margin_right = 241.0
margin_bottom = 50.0
custom_fonts/font = SubResource( 21 )
text = "DOENÇA PRESENTE NO PACIENTE?"
__meta__ = {
"_edit_lock_": true
}

[node name="PatientHasVirus" type="OptionButton" parent="UI/VirusSection"]
modulate = Color( 1, 0, 0, 1 )
margin_left = 244.0
margin_top = 35.0
margin_right = 299.0
margin_bottom = 53.0
custom_fonts/font = SubResource( 22 )
flat = true
clip_text = true
__meta__ = {
"_edit_lock_": true
}

[node name="SignatureSection" type="Control" parent="UI"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = -57.0
margin_right = -20.0
margin_bottom = -37.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true
}

[node name="Line" type="Line2D" parent="UI/SignatureSection"]
position = Vector2( 62, -20 )
points = PoolVector2Array( -7, 19, 245, 19 )
width = 4.0
__meta__ = {
"_edit_lock_": true
}

[node name="SignatureLabel" type="Label" parent="UI/SignatureSection"]
modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -107.0
margin_top = -6.0
margin_right = 107.0
margin_bottom = 6.0
custom_fonts/font = SubResource( 23 )
text = "(Assinatura do Médico Responsável)"
__meta__ = {
"_edit_lock_": true
}

[node name="DocSendButton" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 122.0
margin_top = 203.0
margin_right = 202.0
margin_bottom = 283.0
texture_normal = ExtResource( 4 )
expand = true

[node name="MedicEvaluation" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="MedicCall" type="Timer" parent="."]
wait_time = 8.0
one_shot = true

[node name="PaperFlip1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="PaperFlip2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="Signature" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -5.0

[node name="Stamp" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[node name="PaperSliding1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )

[node name="PaperSliding2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )

[node name="PaperSliding3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[connection signal="pressed" from="DocExitButton" to="." method="_on_DocExitButton_pressed"]
[connection signal="pressed" from="DocSendButton" to="." method="_on_DocSendButton_pressed"]
[connection signal="timeout" from="MedicEvaluation" to="." method="_on_MedicEvaluation_timeout"]
[connection signal="timeout" from="MedicCall" to="." method="_on_MedicCall_timeout"]
